# myproject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/adapters/: base.py  openclaw.py
app/core/: auth.py  config.py  exceptions.py  logging.py  (+2 more)
docs/: AGENT_COMM_PROTOCOL.md  ARCHITECTURE.md  OPENCLAW_COMMUNITY_WHITEPAPER.txt  README.md
scripts/: bootstrap_admin.py  control_plane_publish_control_docs.py  control_plane_publish_status.py  control_plane_set_objective.py  control_plane_snapshot.py  control_plane_worker.py  control_plane_worker_prompt.txt  demo_agents.py  init_db.py  install_remote_codex_executor.sh  install_server_control_plane_worker.sh  local_control_plane_controller.py  local_control_plane_controller_prompt.txt  message_bus_dual_agent_smoke.py  message_bus_real_agent33_smoke.py  message_bus_webhook_smoke.py  message_protocol_v2_canary.py  remote_codex_architect_loop.py  remote_codex_architect_prompt.txt  remote_codex_common.py  remote_codex_executor_server.py  remote_codex_set_objective.py  seed_demo.py  start_local_control_plane_controller.ps1  start_remote_codex_architect_loop.ps1  webhook_smoke_receiver.py
tests/: test_group_protocol_patch_events.py  test_group_protocol_public_view.py  test_groups_schema.py  test_message_bus_protocol_validation.py  test_message_protocol_mapper.py  test_message_protocol_v2_canary_fixture.py  test_message_protocol_v2_schema.py  test_protocol_scaffolds.py  test_sender_receipt_events.py  test_session_sync_contract.py  test_update_group_protocol_events.py
(+136 files in other folders)
